src/test/deca/syntax/invalid/parser/oracle/method_decl2.deca
class A { a (a aa){} }
